# cpp_mysql_connector

./: CMakeLists.txt  README.md  example.cpp  mk.bat  mysql_connector.cpp  thread_pool.cpp
include/: mysql_connector.h  noncopyable.h  thread_pool.h
